# ChangeLog for dev-util/apitrace
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/apitrace/ChangeLog,v 1.12 2012/08/07 09:02:33 radhermit Exp $

  07 Aug 2012; Tim Harder <radhermit@gentoo.org> apitrace-3.0-r1.ebuild,
  +files/apitrace-3.0-gcc47.patch:
  Fix build with gcc-4.7 (bug #424731).

  18 Mar 2012; Tim Harder <radhermit@gentoo.org> -apitrace-3.0.ebuild:
  Remove old.

*apitrace-3.0-r1 (18 Mar 2012)

  18 Mar 2012; Tim Harder <radhermit@gentoo.org> +apitrace-3.0-r1.ebuild,
  files/apitrace-3.0-glxtrace-only.patch:
  Revbump to fixing missing symbol issue with multilib target and conditionally
  build egl support for multilib target.

  18 Mar 2012; Tim Harder <radhermit@gentoo.org> apitrace-2.0-r1.ebuild,
  +files/apitrace-2.0-zlib-1.2.6.patch:
  Fix build with zlib-1.2.6.

  16 Mar 2012; Tim Harder <radhermit@gentoo.org> -apitrace-1.0-r1.ebuild,
  -files/apitrace-1.0-automagic-qt.patch,
  -files/apitrace-1.0-glxtrace-only.patch, -files/apitrace-1.0-libpng15.patch:
  Remove old.

*apitrace-3.0 (16 Mar 2012)

  16 Mar 2012; Tim Harder <radhermit@gentoo.org> +apitrace-3.0.ebuild,
  +files/apitrace-3.0-glxtrace-only.patch,
  +files/apitrace-3.0-system-libs.patch, metadata.xml:
  Version bump. Add egl use flag.

*apitrace-2.0-r1 (15 Dec 2011)

  15 Dec 2011; Tim Harder <radhermit@gentoo.org> -apitrace-2.0.ebuild,
  +apitrace-2.0-r1.ebuild, files/apitrace-2.0-glxtrace-only.patch:
  Revbump and remove old. Update to EAPI 4 and fix multilib missing symbols
  issue.

*apitrace-2.0 (01 Oct 2011)

  01 Oct 2011; Tim Harder <radhermit@gentoo.org> +apitrace-2.0.ebuild,
  +files/apitrace-2.0-glxtrace-only.patch,
  +files/apitrace-2.0-system-libs.patch:
  Version bump.

  13 Sep 2011; Samuli Suominen <ssuominen@gentoo.org> apitrace-1.0-r1.ebuild,
  +files/apitrace-1.0-libpng15.patch:
  Fix building with libpng15 wrt #378533 by Diego Elio Pettenò
