@@ -1,11 +1,11 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/apitrace/apitrace-3.0-r1.ebuild,v 1.2 2012/08/07 09:02:33 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/apitrace/apitrace-3.0-r1.ebuild,v 1.3 2012/09/04 07:44:52 radhermit Exp $
 
 EAPI="4"
 PYTHON_DEPEND="2:2.6"
 
-inherit cmake-utils eutils python multilib
+inherit cmake-utils eutils python multilib vcs-snapshot
 
 DESCRIPTION="A tool for tracing, analyzing, and debugging graphics APIs"
 HOMEPAGE="https://github.com/apitrace/apitrace"
@@ -44,11 +44,6 @@ PATCHES=(
 
 pkg_setup() {
 	python_set_active_version 2
-}
-
-src_unpack() {
-	unpack ${A}
-	mv *-${PN}-* "${S}"
 }
 
 src_prepare() {
