@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/apitrace
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/apitrace/ChangeLog,v 1.12 2012/08/07 09:02:33 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/apitrace/ChangeLog,v 1.13 2012/09/04 07:44:52 radhermit Exp $
+
+  04 Sep 2012; Tim Harder <radhermit@gentoo.org> apitrace-3.0-r1.ebuild:
+  Use vcs-snapshot eclass.
 
   07 Aug 2012; Tim Harder <radhermit@gentoo.org> apitrace-3.0-r1.ebuild,
   +files/apitrace-3.0-gcc47.patch:
